tests/compile_errors/025-multiple-out.buzz
| Only one `out` statement is allowed in block expression
test "multiple out statements" {
    <{
        out "one";
        out "two";
    };
}